increase line-height for headings to avoid clipping

--- a/src/_sass/04.elements/headings.scss
+++ b/src/_sass/04.elements/headings.scss
@@ -5,7 +5,7 @@ h4,
 h5,
 h6 {
     font-family: var(--font__sans-serif);
-    line-height: 1.2;
+    line-height: 1.25;
     a {
         border: 0;
     }
